--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
 <h2 id="title">Welcome to Ember.js</h2>
 
+{{link-to "Home" "index"}}
+{{link-to "Catalog" "products"}}
+{{link-to "Cart" "cart"}}
+
+<hr />
+
 {{outlet}}
