update cart template

--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -1,6 +1,6 @@
 <h1>注文確認</h1>
 
-{{model.length}}個の商品がカートに入っています。
+{{uniqProductCount}}種類 ({{model.length}}個)の商品がカートに入っています。
 
 <ul>
   {{#each product in model}}
